--- a/action.yml
+++ b/action.yml
@@ -9,6 +9,10 @@ inputs:
     description: 'The distribution of java to use'
     required: false
     default: 'zulu'
+  ivy-cache-version:  # extra ivy-cache-label
+    description: 'extra ivy cache label'
+    required: false
+    default: ''
 runs:
   using: "composite"
   steps:
@@ -26,7 +30,7 @@ runs:
       id: ivyCache
       with:
         path: ~/.ivy2/cache
-        key: ${{ runner.os }}-ivy-${{ hashFiles('**/ivy.xml') }}
+        key: ${{ runner.os }}-ivy${{ inputs.ivy-cache-version }}-${{ hashFiles('**/ivy.xml') }}
         restore-keys: |
           ${{ runner.os }}-ivy-
 
