--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,14 @@
 name: 'Java Setup for ant/ivy project'
 description: 'A collection of steps in a public repo'
 inputs:
+  do-checkout:  # perform code checkout
+    description: 'Do you want us to do this step or not'
+    required: false
+    default: 'false'
   java-version:  # the java version
     description: 'The version of java to use'
     required: false
-    default: '8'
+    default: '11'
   java-distribution:  # the java distribution
     description: 'The distribution of java to use'
     required: false
@@ -18,6 +22,8 @@ runs:
   steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v3
+      id: checkout
+      if: ${{ inputs.do-checkout }} == "true"
 
     # set up java
     - uses: actions/setup-java@v3
